# foocat_sc

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat_sc.rst  modules.rst
foocat_sc/: foocat_sc.py
tests/: test_foocat_sc.py
