[tool.poetry]
name = "foocat_sc"
version = "0.1.0"
description = "Python package that eases the pain concatenating Pandas categoricals!"
authors = ["csbing86 <csbing86@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
